[tool.poetry]
name = "gupshup"
version = "0.1.0"
description = ""
authors = ["SolanoJason <pajason2000@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
flask = "^3.0.3"
jupyterlab = "^4.2.4"
environs = "^11.0.0"
pymongo = "^4.8.0"
black = "^24.8.0"
openai = "^1.40.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
